2006-10-07 Patrick Galbraith <patg@patg.net>, Jim Winstead <jimw@mysql.com>
  (3.0007_2)
  * Added UTF8 patch from Dominic Mitchell (Thanks!)
  * Fixed declaration of "row" in mysql_st_internal_execute which caused compile
    errors on some platforms
  * Fix documentation for _ListDBs to remove incorrect information about
    limitations of data_sources(). (RT #20843, patch by Ann Barcomb)
  * Fix typo in example (missing quote). (RT #15086)
  * Mention in POD that 'localhost' always means to connect via UNIX socket,
    and 127.0.0.1 must be used for TCP/IP to localhost (RT #14942, reported by
    Alessandro Ranellucci)
  * Fix typos in Makefile.PL (RT#16178, reported by Gavin Shelley)

2006-09-08 Jim Winstead <jimw@mysql.com>, Patrick Galbraith <patg@mysql.com>
(3.0007_1) (3.0006/3.0006_1 is the same as 3.0005/3.0005_1)
  * Make sure to call dbd_st_finish when all rows from a statement handle
    have been fetched. (Bug #20153, Bug #21607, RT #20464, RT #21241)
  * Patch from Steve Hay to fix bind_param to deal properly with insertion
    of a NULL into an INT or DOUBLE column using server-side prepare.
    Converted Steve's dbi.pl script to expose this problem to 40bindparam2
    test.
  * Fix to mysql_st_internal_execute to keep from passing undefined dbh
    handle member (bind_type_guessing) to parse_param causing crash on
    OpenBSD. Reported on rt.cpan.org (#20868) by Kyle Georg, as well as
    info from Sam Smith and Federico Giannici
  * Cleaned up tests to make sure test table is dropped at end of test.

2006-06-10 Patrick Galbraith <patg@mysql.com) (3.0005)
  * Fix dbd_st_finish in 3.0004 didn't clean up bind buffers resulting in
    a memory leak. See eg/prepare_memory_usage.pl to see how this manifests
    itself. Thanks to Jason Snell for giving me a good script to reproduce
    this!
  * Fix to parse_params, mysql.xs dbh->do, and bind_param to deal with
    passing substr to "do" for placeholder value. Thanks Martin Waite for