@@ -210,6 +210,9 @@ my $fileName = $@ ?
 
 
 my $cflags = "-I\$(DBI_INSTARCH_DIR) $opt->{'cflags'}";
+if ($^O eq 'VMS') {
+  $cflags = "\$(DBI_INSTARCH_DIR),$opt->{'cflags'}";
+}
 $cflags .= " -DDBD_MYSQL_WITH_SSL" if $opt->{'ssl'};
 $cflags .= " -DDBD_MYSQL_INSERT_ID_IS_GOOD" if $DBI::VERSION > 1.42;
 $cflags .= " -DDBD_NO_CLIENT_FOUND_ROWS" if $opt->{'nofoundrows'};
@@ -734,7 +737,7 @@ sub libscan {
     $path;
 }
 
-sub postamble {
+sub macro {
   "\n" . DBI::DBD::dbd_postamble(@_) . <<"POSTAMBLE";
 
 installhtml: lib/DBD/mysql/INSTALL.pod
