@@ -1,3 +1,14 @@
+2006-10-10 Patrick Galbraith <patg@patg.net> (3.0008_1)
+* Added patch for SSL Verify Certificate (Thanks Eric Chen!)
+* Added multiple fixes to dbd_st_prepare which fixed variable overwrite
+  and unset increment counter. Also improved loop which checks statements
+  for presence of "LIMIT" by using a pointer as opposed to char array
+  increment variable. These errors were showing up in OpenBSD and other
+  Unixen (which I think all BSD-based) (Thanks to Kyle George!)
+* Added fix to Makefile.PL to obtain correct build flags on VMS 
+  (Thanks to Eric Milkie!)
+* Fixed casting of num_params to unsigned int in calls to NewZ in mysql.xs
+
 2006-10-07 Patrick Galbraith <patg@patg.net>, Jim Winstead <jimw@mysql.com>
   (3.0007_2)
   * Added UTF8 patch from Dominic Mitchell (Thanks!)
